trunk/Archive2/51/c2acf52619bd9e/output
main.cpp:38:25: error: no matching function for call to 'regex_replace'
    std::string new_s = std::regex_replace(s, long_word_regex, "[$&]");
                        ^~~~~~~~~~~~~~~~~~
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/regex.h:2182:5: note: candidate template ignored: could not match 'basic_string<type-parameter-0-1, char_traits<type-parameter-0-1>, allocator<type-parameter-0-1> >' against 'char const[5]'
    regex_replace(const basic_string<_Ch_type>& __s,
    ^
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/regex.h:2162:5: note: candidate function template not viable: requires at least 5 arguments, but 3 were provided
    regex_replace(_Out_iter __out, _Bi_iter __first, _Bi_iter __last,
    ^
1 error generated.
